--- a/hmzs-screen/package.json
+++ b/hmzs-screen/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.8.1",
+    "js-cookie": "^3.0.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -16,6 +18,7 @@
     "@vitejs/plugin-vue": "^4.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "sass": "^1.85.1",
     "vite": "^4.4.11"
   }
 }
