--- a/hmzs-screen/package.json
+++ b/hmzs-screen/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "js-cookie": "^3.0.5",
+    "v-scale-screen": "^2.3.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
