--- a/hmzs-screen/package.json
+++ b/hmzs-screen/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "echarts": "^5.6.0",
     "js-cookie": "^3.0.5",
     "v-scale-screen": "^2.3.0",
     "vue": "^3.3.4",
