--- a/hmzs-screen/package.json
+++ b/hmzs-screen/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.1",
     "echarts": "^5.6.0",
     "js-cookie": "^3.0.5",
+    "three": "^0.158.0",
     "v-scale-screen": "^2.3.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
