大屏可视化-3D-vue3里使用vuex把数据更新到标签上

--- a/hmzs-screen/package.json
+++ b/hmzs-screen/package.json
@@ -16,7 +16,8 @@
     "three": "^0.158.0",
     "v-scale-screen": "^2.3.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
