--- a/hmzs-screen/package.json
+++ b/hmzs-screen/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^12.8.2",
     "axios": "^1.8.1",
     "echarts": "^5.6.0",
+    "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "three": "^0.158.0",
     "v-scale-screen": "^2.3.0",
