--- a/hmzs-screen/package.json
+++ b/hmzs-screen/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "sass": "^1.85.1",
-    "vite": "^4.4.11"
+    "vite": "^4.4.11",
+    "vite-plugin-qiankun": "^1.0.15"
   }
 }
