--- a/vue-admin-161/.env.development
+++ b/vue-admin-161/.env.development
@@ -1,7 +1,4 @@
 # just a flag
 ENV = 'development'
-
 # base api
-VUE_APP_BASE_URL= '/api'
-
-
+VUE_APP_BASE_API = 'https://api-hmzs.itheima.net/v1'
